dev after complete

--- a/app/src/main/res/layout/fragment_gate_controls.xml
+++ b/app/src/main/res/layout/fragment_gate_controls.xml
@@ -60,4 +60,16 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp" />
 
+    <Button
+        android:id="@+id/button_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Checking status: "
+        android:backgroundTint="@color/teal_200"
+        app:layout_constraintTop_toBottomOf="@+id/button_gate_2"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
