--- a/app/src/main/res/layout/fragment_gate_controls.xml
+++ b/app/src/main/res/layout/fragment_gate_controls.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="Door Controls"
+        android:text="Gate Controls"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
         android:id="@+id/text_gate_instruction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Click to open or close the door"
+        android:text="Click to open or close the gate"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/text_gate_controls"
         app:layout_constraintStart_toStartOf="parent"
